app/assets/stylesheets/reports.scss
/* ... */
.report-mcu {
  .report-main-body {
    margin-top: 10px;
  }
}

.report-capital-stock-trial-balance {
  .report-table {
    width: auto;
  }
}

.report-profile {
  h2 {
    @extend %typography-section-title;
    margin-top: 0;
  }

  .date-time {
    font-weight: $semibold-weight
  }
  dl {
    @extend %clearfix;
    margin: 0;
  }
  dt, dd {
    @extend %typography-subtitle;
    float: left;
  }
  dd {
    margin-left: 20px;
  }
  dt {
    clear: both;
    color: $medium-gray;
  }
  ul {
    margin: 0;
    padding-left: 0;
    list-style-type: none;
  }
  li {
    @extend %typography-subtitle;
  }
  section {
    margin-bottom: 0;
  }
  .report-profile-horizontal-axis-label {
    @extend %typography-horizontal-axis-label;
    float: left;
    margin-bottom: 10px;
  }
  .report-profile-market-value {
    margin-left: 135px;
  }
  .report-profile-borrowing-capacity {
    margin-left: 100px;
  }
  table {
    border: 0;
    margin-bottom: 20px;
    tbody, tfoot, thead {
      td, th {
        padding: 5px;
      }
    }
    tbody {
      td:first-child {
        @extend %typography-table-heading;
        background-color: $light-gray;
      }
    }
    tbody, thead {
      td, th {
        border-left: 1px solid $light-blue;
        border-top: 1px solid $light-blue;
      }
      th.report-profile-table-cutout {
        border-top: 0;
        border-left: 0;
        background-color: $white;
      }
    }
    tfoot {
      td:first-child {
        border-right: 0;
      }
    }
  }
  .report-profile-sta tr td:last-child {
    text-align: right;
  }
}
/* ... */

